--- a/react-front/package.json
+++ b/react-front/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.6",
+    "axios": "^0.19.0",
+    "js-file-download": "^0.4.8",
     "react": "^16.10.2",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
